CXBOX-569 | Dictionary - strongly typed LOV replacement  (#283)
* CXBOX-569 Documentation. New Lov